--- a/src/_global/_colors.scss
+++ b/src/_global/_colors.scss
@@ -16,7 +16,7 @@ $color-cyan: #00bcd4;
 $color-teal: #009688;
 $color-light-green: #8bc34a;
 $color-lime: #cddc39;
-$color-yellow: #FFFC00;
+$color-yellow: #fffc00;
 $color-amber: #ffc107;
 $color-orange: #ff9800;
 $color-deep-orange: #ff5722;
@@ -26,11 +26,11 @@ $color-blue-grey: #607d8b;
 $color-black: #000;
 $color-white: #fff;
 $color-roman-silver: #838996;
-$color-viridian-green: #40826D;
-$color-emerald: #50C878;
+$color-viridian-green: #40826d;
+$color-emerald: #50c878;
 $color-english-red: #ab4b52;
 $color-lemon-glacier: #fdff00;
-$color-sage: #BCB88A;
+$color-sage: #bcb88a;
 $color-bittersweet: #fe6f5e;
 $color-isabeline: #f4f0ec;
 $color-dark-slate-gray: #2f4f4f;
