--- a/src/_global/_font.scss
+++ b/src/_global/_font.scss
@@ -1,3 +1,4 @@
-$is-montserrat: "Montserrat";
-$is-rubix: "Rubix";
-$is-poppins: "Poppins";
+$primary-font: "Lato";
+$secondary-font: "Poppins";
+$tertiary-font: "Rubix";
+$quaternary-font: "Montserrat";
