--- a/src/components/card-action-button.scss
+++ b/src/components/card-action-button.scss
@@ -1,8 +1,13 @@
+/*******************************************************************************************************
+********************************************************************************************************
+--------------------------------------- Card button styles ---------------------------------------------
+********************************************************************************************************
+********************************************************************************************************/
+
 .card-btn,
 .card-button {
-    @include button;
-    padding: $sizeXs $sizeSm;
-    margin-top: $sizeMd;
-    margin-left: $sizeSm;
+  @include button;
+  padding: $sizeXs $sizeSm;
+  margin-top: $sizeMd;
+  margin-left: $sizeSm;
 }
-
