--- a/src/components/card-action-icon.scss
+++ b/src/components/card-action-icon.scss
@@ -1,5 +1,11 @@
+/*******************************************************************************************************
+********************************************************************************************************
+---------------------------------------- Card-icon styles ----------------------------------------------
+********************************************************************************************************
+********************************************************************************************************/
+
 .card-icon {
-    width: $sizeMd;
-    height: $sizeMd;
-    cursor: pointer;
+  width: $sizeMd;
+  height: $sizeMd;
+  cursor: pointer;
 }
