--- a/src/components/card-actions.scss
+++ b/src/components/card-actions.scss
@@ -1,6 +1,12 @@
+/*******************************************************************************************************
+********************************************************************************************************
+---------------------------------------- Card action styles --------------------------------------------
+********************************************************************************************************
+********************************************************************************************************/
+
 .card-actions {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 $sizeMd $sizeSm $sizeMd;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 $sizeMd $sizeSm $sizeMd;
 }
