--- a/src/components/card-content.scss
+++ b/src/components/card-content.scss
@@ -1,3 +1,9 @@
+/*******************************************************************************************************
+********************************************************************************************************
+------------------------------------------ Card content styles -----------------------------------------
+********************************************************************************************************
+********************************************************************************************************/
+
 .card-cont,
 .card-content {
   margin: $sizeSm;
@@ -16,7 +22,7 @@
   }
 
   &.fullHeight {
-    overflow: auto;
+    overflow-y: auto;
     max-height: fit-content;
   }
 }
