--- a/src/components/card-profile.scss
+++ b/src/components/card-profile.scss
@@ -1,11 +1,17 @@
+/*******************************************************************************************************
+********************************************************************************************************
+------------------------------------------ Card profile styles -----------------------------------------
+********************************************************************************************************
+********************************************************************************************************/
+
 .card-profile {
-    margin: $sizeMd auto 0 auto;
-    width: 160px;
-    height: 160px;
-    & img {
-        width: inherit;
-        height: inherit;
-        object-fit: cover;
-        border-radius: 50%;
-    }
+  margin: $sizeMd auto 0 auto;
+  width: 160px;
+  height: 160px;
+  & img {
+    width: inherit;
+    height: inherit;
+    object-fit: cover;
+    border-radius: 50%;
+  }
 }
