--- a/src/components/cards.scss
+++ b/src/components/cards.scss
@@ -1,5 +1,11 @@
+/*******************************************************************************************************
+********************************************************************************************************
+------------------------------------------ Cards styles ------------------------------------------------
+********************************************************************************************************
+********************************************************************************************************/
+
 .cards {
-    display: flex;
-    max-width: inherit;
-    flex-wrap: wrap;
+  display: flex;
+  max-width: inherit;
+  flex-wrap: wrap;
 }
