--- a/src/components/divider.scss
+++ b/src/components/divider.scss
@@ -1,3 +1,9 @@
+/*******************************************************************************************************
+********************************************************************************************************
+------------------------------------------ Divider styles ----------------------------------------------
+********************************************************************************************************
+********************************************************************************************************/
+
 hr.divider {
   width: 95%;
   color: $color-dark;
