--- a/src/components/font.scss
+++ b/src/components/font.scss
@@ -1,4 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins&family=Rubik&display=swap");
-.has-centered-text {
+/*******************************************************************************************************
+********************************************************************************************************
+------------------------------------------ Font styles -------------------------------------------------
+********************************************************************************************************
+********************************************************************************************************/
+
+@import url("https://fonts.googleapis.com/css2?family=Lato&family=Montserrat&family=Poppins:ital@1&family=Rubik:ital@1&display=swap");
+
+.centered-text {
   text-align: center;
 }
