--- a/src/components/icons.scss
+++ b/src/components/icons.scss
@@ -1,3 +1,9 @@
+/*******************************************************************************************************
+********************************************************************************************************
+----------------------------------------- Material icon styles -----------------------------------------
+********************************************************************************************************
+********************************************************************************************************/
+
 @font-face {
   font-family: "Material Icons";
   font-style: normal;
