--- a/src/components/image.scss
+++ b/src/components/image.scss
@@ -1,3 +1,9 @@
+/*******************************************************************************************************
+********************************************************************************************************
+----------------------------------------- Image styles ------------------------------------------------
+********************************************************************************************************
+********************************************************************************************************/
+
 $imageSizes: (24, 32, 40, 48, 56, 64, 72, 80, 88, 96, 104, 114, 120, 128);
 @each $size in $imageSizes {
   img.is-#{$size}x#{$size} {
