--- a/src/components/modal-card.scss
+++ b/src/components/modal-card.scss
@@ -1,3 +1,11 @@
+/*******************************************************************************************************
+********************************************************************************************************
+----------------------------------------- Modal card styles --------------------------------------------
+---- 1. Modal card styles ------------------------------------------------------------------------------
+---- 2. Modal card responsiveness styles ---------------------------------------------------------------
+********************************************************************************************************
+********************************************************************************************************/
+
 // TODO: Create a modal card
 .modal-card {
   @include card;
@@ -38,6 +46,7 @@
   }
 }
 
+/***************** Modal card responsivness styles ****************/
 @media screen and (max-width: 940px) and (min-width: 741px) {
   .card {
     flex-basis: calc(33.33% - $sizeMd);
