--- a/src/components/card-header.scss
+++ b/src/components/card-header.scss
@@ -1,34 +1,40 @@
+/*******************************************************************************************************
+********************************************************************************************************
+------------------------------------------ Card header styles ------------------------------------------
+********************************************************************************************************
+********************************************************************************************************/
+
 .card-header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: $sizeSm;
+
+  & img {
+    width: $sizeLg;
+    height: $sizeLg;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+
+  .user-info {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: $sizeSm;
+    flex-direction: column;
+  }
+  .user-name {
+    font-weight: 500;
+    font-size: 14px;
+  }
 
-    & img {
-        width: $sizeLg;
-        height: $sizeLg;
-        border-radius: 50%;
-        object-fit: cover;
-    }
+  .card-date {
+    font-size: 12px;
+    color: $color-dark;
+  }
 
-    .user-info {
-        display: flex;
-        flex-direction: column;
-    }
-    .user-name {
-        font-weight: 500;
-        font-size: 14px;
-    }
-
-    .card-date {
-        font-size: 12px;
-        color: $color-dark;
-    }
-
-    .cd-hdr-icon,
-    .card-header-icon {
-        width: $sizeMd;
-        height: $sizeMd;
-        cursor: pointer;
-    }
+  .cd-hdr-icon,
+  .card-header-icon {
+    width: $sizeMd;
+    height: $sizeMd;
+    cursor: pointer;
+  }
 }
