--- a/src/components/card-image.scss
+++ b/src/components/card-image.scss
@@ -1,9 +1,15 @@
+/*******************************************************************************************************
+********************************************************************************************************
+------------------------------------------ Card images styles ------------------------------------------
+********************************************************************************************************
+********************************************************************************************************/
+
 .card-image {
-    border-radius: $sizeSm;
-    margin: 0 auto;
-    & img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
+  border-radius: $sizeSm;
+  margin: 0 auto;
+  & img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 }
