--- a/src/components/card.scss
+++ b/src/components/card.scss
@@ -1,5 +1,13 @@
+/*******************************************************************************************************
+********************************************************************************************************
+------------------------------------------ Card styles -------------------------------------------------
+********************************************************************************************************
+********************************************************************************************************/
+
 .card {
   @include card;
+  overflow: hidden;
+  font-family: $secondary-font;
 
   &:nth-last-child(1) {
     align-items: flex-end;
@@ -7,7 +15,7 @@
 
   &:hover {
     transform: scale(1.01);
-    transition: .2s;
+    transition: 0.2s;
   }
 }
 
