--- a/src/components/gird.scss
+++ b/src/components/gird.scss
@@ -1,46 +1,73 @@
-//TODO: Add column by row grid
+/*******************************************************************************************************
+********************************************************************************************************
+------------------------------------------ Grid system styles ------------------------------------------
+---- 1. Grid styles ------------------------------------------------------------------------------------
+---- 2. Grid responsiveness styles ---------------------------------------------------------------------
+********************************************************************************************************
+********************************************************************************************************/
+
 .gd-container,
 .grid-container {
-    display: grid;
-    grid-gap: 16px;
-    margin: 1%;
+  display: grid;
+  grid-gap: $sizeMd;
+  margin: $sizeSm 0;
 }
 
 .col-container,
 .column-container {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-row-gap: 20px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-row-gap: 20px;
 }
 
 .rw-reverse,
 .row-reverse {
-    flex-direction: row-reverse;
+  flex-direction: row-reverse;
 }
 
 .col-reverse,
 .column-reverse {
-    flex-direction: column-reverse;
+  flex-direction: column-reverse;
 }
 
-.rw-container, 
+.rw-container,
 .row-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap: 16px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: $sizeMd;
 }
 
-$numbers: (one, two, three, four, five, six, seven, eight, nine, ten, eleven, twelve);
-@for $index from 1 through length($numbers) {
-    .grid-row-column-#{$index},
-    .gd-rw-col-#{$index} {
-        grid-template-columns: repeat($index, 1fr);
-    }
+.no-gap {
+  grid-gap: 0;
 }
+
+$numbers: (
+  one,
+  two,
+  three,
+  four,
+  five,
+  six,
+  seven,
+  eight,
+  nine,
+  ten,
+  eleven,
+  twelve
+);
+
+@for $index from 1 through length($numbers) {
+  .grid-row-column-#{$index},
+  .gd-rw-col-#{$index} {
+    grid-template-columns: repeat($index, 1fr);
+  }
+}
+
+/***************** Grid responsiveness styles ****************/
 
 @media screen and (max-width: 500px) {
-    .rw-container, 
-    .row-container {
-        grid-template-columns: 1fr;
-    }
+  .rw-container,
+  .row-container {
+    grid-template-columns: 1fr;
+  }
 }
