--- a/src/components/link.scss
+++ b/src/components/link.scss
@@ -1,122 +1,138 @@
+/*******************************************************************************************************
+********************************************************************************************************
+------------------------------------------ Link styles -------------------------------------------------
+********************************************************************************************************
+********************************************************************************************************/
 .link {
-    text-decoration: none;
-    font-family: $is-segoe-ui;
-    color: $color-info;
+  text-decoration: none;
+  font-family: $secondary-font;
+  color: $color-info;
 
-    &:hover {
-        text-decoration: underline;
-    }
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+.label-link {
+  display: inline-flex;
+  width: max-content;
+  color: inherit;
+  text-decoration: none;
+  align-items: flex-end;
+  & span.material-icons {
+    vertical-align: baseline;
+  }
 }
 
 .link-is-underlined {
-    text-decoration: underline;
-    color: inherit;
+  text-decoration: underline;
+  color: inherit;
 }
 
 .link-is-red {
-    color: $color-red;
+  color: $color-red;
 }
 
 .link-is-green {
-    color: $color-green;
+  color: $color-green;
 }
 
 .link-is-blue {
-    color: $color-blue;
+  color: $color-blue;
 }
 
 .link-is-success {
-    color: $color-success;
+  color: $color-success;
 }
 
 .link-is-danger {
-    color: $color-danger;
+  color: $color-danger;
 }
 
 .link-is-warning {
-    color: $color-warning;
+  color: $color-warning;
 }
 
 .link-is-info {
-    color: $color-info;
+  color: $color-info;
 }
 
 .link-is-light {
-    color: $color-light;
+  color: $color-light;
 }
 
 .link-is-dark {
-    color: $color-dark;
+  color: $color-dark;
 }
 
 .link-is-pink {
-    color: $color-pink;
+  color: $color-pink;
 }
 
 .link-is-purple {
-    color: $color-purple;
+  color: $color-purple;
 }
 
 .link-is-deep-purple {
-    color: $color-deep-purple;
+  color: $color-deep-purple;
 }
 
 .link-is-indigo {
-    color: $color-indigo;
+  color: $color-indigo;
 }
 
 .link-is-light-blue {
-    color: $color-light-blue;
+  color: $color-light-blue;
 }
 
 .link-is-cyan {
-    color: $color-cyan;
+  color: $color-cyan;
 }
 
 .link-is-teal {
-    color: $color-teal;
+  color: $color-teal;
 }
 
 .link-is-light-green {
-    color: $color-light-green;
+  color: $color-light-green;
 }
 
 .link-is-lime {
-    color: $color-lime;
+  color: $color-lime;
 }
 
 .link-is-yellow {
-    color: $color-yellow;
+  color: $color-yellow;
 }
 
 .link-is-amber {
-    color: $color-amber;
+  color: $color-amber;
 }
 
 .link-is-orange {
-    color: $color-orange;
+  color: $color-orange;
 }
 
 .link-is-deep-orange {
-    color: $color-deep-orange;
+  color: $color-deep-orange;
 }
 
 .link-is-brown {
-    color: $color-brown;
+  color: $color-brown;
 }
 
 .link-is-grey {
-    color: $color-grey;
+  color: $color-grey;
 }
 
 .link-is-blue-grey {
-    color: $color-blue-grey;
+  color: $color-blue-grey;
 }
 
 .link-is-white {
-    color: $color-white;
+  color: $color-white;
 }
 
 .link-is-black {
-    color: $color-black;
+  color: $color-black;
 }
