--- a/src/components/modal-cards.scss
+++ b/src/components/modal-cards.scss
@@ -1,12 +1,20 @@
+/*******************************************************************************************************
+********************************************************************************************************
+----------------------------------------- Modal card styles --------------------------------------------
+---- 1. Modal cards styles ------------------------------------------------------------------------------
+---- 2. Modal cards responsiveness styles ---------------------------------------------------------------
+********************************************************************************************************
+********************************************************************************************************/
 //FIXME: modal responsiveness
 .modal-cards {
-    display: flex;
-    max-width: inherit;
-    flex-wrap: wrap;
+  display: flex;
+  max-width: inherit;
+  flex-wrap: wrap;
 }
 
+/***************** Modal cards responsivenesss styles ****************/
 @media screen and (max-width: 400px) {
-    .modal-cards {
-        flex-direction: column;
-    }
+  .modal-cards {
+    flex-direction: column;
+  }
 }
