--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -1,5 +1,12 @@
+/*******************************************************************************************************
+********************************************************************************************************
+----------------------------------------- Navbar styles ------------------------------------------------
+---- 1. Navbar styles ----------------------------------------------------------------------------------
+---- 2. Navbar responsiveness styles -------------------------------------------------------------------
+********************************************************************************************************
+********************************************************************************************************/
+
 @import "../components/link.scss";
-@import "../misc/elevation.scss";
 
 header {
   @include normalize;
@@ -8,7 +15,7 @@ header {
   align-items: center;
   width: 100%;
   padding: 0 $sizeXLg;
-  @extend .elev-20;
+  z-index: 20;
   transition: all 0.3s ease-in-out;
   position: fixed;
   top: 0;
@@ -29,7 +36,7 @@ header {
 }
 
 .sticky {
-  background-color: $color-danger;
+  background-color: $color-dark;
   height: 50px;
 }
 .logo {
@@ -47,11 +54,16 @@ header {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  @extend .elev-11;
+  z-index: 11;
 
   .nav-link {
     @extend .link;
     color: inherit;
+  }
+
+  .label-nav-link {
+    @extend .label-link;
+    align-items: center;
   }
 }
 
@@ -68,10 +80,6 @@ header {
 }
 
 @media screen and (max-width: 947px) {
-  body {
-    overflow-x: hidden;
-  }
-
   .nav-menu {
     background: $color-white;
     position: fixed;
@@ -89,7 +97,8 @@ header {
       transform: translateY(0%);
     }
 
-    .nav-link {
+    .nav-link,
+    .label-nav-link {
       padding: 5px 0;
       color: $color-black;
       border-bottom: 1px solid $color-grey;
@@ -99,6 +108,9 @@ header {
       &:last-child {
         border-bottom: none;
       }
+    }
+    .label-nav-link {
+      justify-content: center;
     }
   }
 
