--- a/src/components/table.scss
+++ b/src/components/table.scss
@@ -1,17 +1,22 @@
+/*******************************************************************************************************
+********************************************************************************************************
+----------------------------------------- Table styles --------------------------------------------
+********************************************************************************************************
+********************************************************************************************************/
+
 table {
   @include normalize;
+  border-collapse: collapse;
   border-spacing: 0;
   width: 100%;
-  border-collapse: collapse;
-  font-family: $is-segoe-ui;
+  font-family: $secondary-font;
   border: 1px solid lighten($color: $color-grey, $amount: 15%);
-}
-
-.table-is-responsive {
   overflow-x: auto;
 }
+
 th {
   background-color: lighten($color: $color-grey, $amount: 15%);
+  font-weight: bold;
 }
 
 th,
